syntax = "proto3";

package com.teddy.srv.content;

option go_package = "proto";

import "github.com/golang/protobuf/ptypes/empty/empty.proto";
import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";

service Content {
    rpc GetTags (GetTagReq) returns (GetTagsResp) {}
    rpc PublishInfo (PublishInfoReq) returns (google.protobuf.Empty) {}
    rpc EditInfo (EditInfoReq) returns (google.protobuf.Empty) {}
    rpc GetInfos (GetInfosReq) returns (GetInfosResp) {}
    rpc DeleteInfo (InfoIDReq) returns (google.protobuf.Empty) {}
    rpc WatchInfo (InfoIDReq) returns (google.protobuf.Empty) {}

    rpc LikeInfo (InfoIDReq) returns (google.protobuf.Empty) {}
    rpc UnLikeInfo (InfoIDReq) returns (google.protobuf.Empty) {}
    rpc GetUserThumbUp (UIDPageReq) returns (InfoIDsResp) {}
    rpc GetUserThumbDown(UIDPageReq) returns (InfoIDsResp) {}
    rpc GetInfoThumbUp(InfoIDPageReq) returns (UserIDsResp) {}
    rpc GetInfoThumbDown(InfoIDPageReq) returns (UserIDsResp) {}

    rpc FavoriteInfo (InfoIDReq) returns (google.protobuf.Empty) {}
    rpc GetUserFavorite (UIDPageReq) returns (InfoIDsResp) {}
    rpc GetInfoFavorite (InfoIDPageReq) returns (UserIDsResp) {}
}

message Tag {
    string tag = 1;
    uint64 usage = 2;
    google.protobuf.Timestamp createTime = 3;
    google.protobuf.Timestamp lastUseTime = 4;
}

message Info {
    string uid = 1;
    string id = 2;
    string title = 3;
    string content = 5;
    repeated string coverList = 6;
    string coverVideo = 7;
    google.protobuf.Timestamp publishTime = 8;
    google.protobuf.Timestamp lastReviewTime = 9;
    bool valid = 10;
    int64 watchCount = 11;
    repeated string tags = 12;
    int64 thumbUp = 13;
    bool isThumbUp = 14;
    repeated string thumbUpList = 15;
    int64 thumbDown = 16;
    bool isThumbDown = 17;
    repeated string thumbDownList = 18;
    int64 favorites = 19;
    bool isFavorite = 20;
    repeated string favoriteList = 21;
    google.protobuf.Timestamp lastModifyTime = 22;
    bool canReview = 23;
}

message GetTagReq {
    uint32 page = 1;
    uint32 size = 2;
    string uid = 3;
}

message UIDPageReq {
    uint32 page = 1;
    uint32 size = 2;
    string uid = 3;
}

message GetTagsResp {
    repeated Tag tags = 1;
}

message PublishInfoReq {
    string uid = 1;
    string title = 2;
    string content = 3;
    repeated string tags = 4;
    map<string, string> coverResources = 5;
    bool canReview = 6;
}

message EditInfoReq {
    string id = 1;
    string uid = 2;
    string title = 3;
    string content = 4;
    repeated string tags = 5;
    map<string, string> coverResources = 6;
    bool canReview = 7;
}

message GetInfosReq {
    uint32 page = 1;
    uint32 size = 2;
    string uid = 3;
}

message GetInfosResp {
    repeated Info infos = 1;
}

message InfoIDReq {
    string id = 1;
}

message InfoIDPageReq {
    string id = 1;
    uint32 size = 2;
    string uid = 3;
}

message UserIDsResp {
    repeated string uids = 1;
}

message InfoIDsResp {
    repeated string ids = 1;
}